Updated v2 tasks list with translations and completion logic. Added GET /tasks/:taskType/users/:userId endpoint for 1 task information + returning of the error description. Added extra param to GetTasks v2 logic to return pending/completed tasks list.
