# cmd/santa-sleigh/api/swagger.json
@@ -1,16 +1,7 @@
 {
-    "schemes": [
-        "https"
-    ],
     "swagger": "2.0",
     "info": {
-        "description": "API that handles everything related to user's achievements and gamification progress.",
-        "title": "Achievements API",
-        "contact": {
-            "name": "ice.io",
-            "url": "https://ice.io"
-        },
-        "version": "latest"
+        "contact": {}
     },
     "paths": {
         "/v1r/achievement-summaries/badges/users/{userId}": {
@@ -277,6 +268,170 @@
                         "name": "userId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "language of translations for tasks description",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "pending",
+                            "completed"
+                        ],
+                        "type": "string",
+                        "description": "pending/completed status filter",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/tasks.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "if validations fail",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "if not authorized",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "if not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "if syntax fails",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "504": {
+                        "description": "if request times out",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1r/tasks/{taskType}/users/{userId}": {
+            "get": {
+                "description": "Returns the tasks and provided user's progress for specific task.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tasks"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "claim_username",
+                            "start_mining",
+                            "upload_profile_picture",
+                            "follow_us_on_twitter",
+                            "join_twitter",
+                            "join_telegram",
+                            "invite_friends",
+                            "join_youtube",
+                            "watch_video_with_code_confirmation_1",
+                            "invite_friends_5",
+                            "invite_friends_10",
+                            "claim_badge_l1",
+                            "claim_badge_l2",
+                            "claim_badge_l3",
+                            "claim_badge_l4",
+                            "claim_badge_l5",
+                            "claim_badge_l6",
+                            "claim_badge_c1",
+                            "claim_badge_c2",
+                            "claim_badge_c3",
+                            "claim_badge_c4",
+                            "claim_badge_c5",
+                            "claim_badge_c6",
+                            "claim_badge_c7",
+                            "claim_badge_c8",
+                            "claim_badge_c9",
+                            "claim_badge_c10",
+                            "claim_badge_s1",
+                            "claim_badge_s2",
+                            "claim_badge_s3",
+                            "claim_badge_s4",
+                            "claim_badge_s5",
+                            "claim_badge_s6",
+                            "claim_badge_s7",
+                            "claim_badge_s8",
+                            "claim_badge_s9",
+                            "claim_badge_s10",
+                            "claim_level_1",
+                            "claim_level_2",
+                            "claim_level_3",
+                            "claim_level_4",
+                            "claim_level_5",
+                            "claim_level_6",
+                            "claim_level_7",
+                            "claim_level_8",
+                            "claim_level_9",
+                            "claim_level_10",
+                            "claim_level_11",
+                            "claim_level_12",
+                            "claim_level_13",
+                            "claim_level_14",
+                            "claim_level_15",
+                            "claim_level_16",
+                            "claim_level_17",
+                            "claim_level_18",
+                            "claim_level_19",
+                            "claim_level_20",
+                            "claim_level_21",
+                            "mining_streak_7",
+                            "mining_streak_14",
+                            "mining_streak_30"
+                        ],
+                        "type": "string",
+                        "description": "the type of the task",
+                        "name": "taskType",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the id of the user you need progress for",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -357,7 +512,63 @@
                             "follow_us_on_twitter",
                             "join_twitter",
                             "join_telegram",
-                            "invite_friends"
+                            "invite_friends",
+                            "invite_friends_5",
+                            "invite_friends_10",
+                            "join_youtube",
+                            "watch_video_with_code_confirmation_1",
+                            "invite_friends_5",
+                            "invite_friends_10",
+                            "claim_badge_l1",
+                            "claim_badge_l2",
+                            "claim_badge_l3",
+                            "claim_badge_l4",
+                            "claim_badge_l5",
+                            "claim_badge_l6",
+                            "claim_badge_c1",
+                            "claim_badge_c2",
+                            "claim_badge_c3",
+                            "claim_badge_c4",
+                            "claim_badge_c5",
+                            "claim_badge_c6",
+                            "claim_badge_c7",
+                            "claim_badge_c8",
+                            "claim_badge_c9",
+                            "claim_badge_c10",
+                            "claim_badge_s1",
+                            "claim_badge_s2",
+                            "claim_badge_s3",
+                            "claim_badge_s4",
+                            "claim_badge_s5",
+                            "claim_badge_s6",
+                            "claim_badge_s7",
+                            "claim_badge_s8",
+                            "claim_badge_s9",
+                            "claim_badge_s10",
+                            "claim_level_1",
+                            "claim_level_2",
+                            "claim_level_3",
+                            "claim_level_4",
+                            "claim_level_5",
+                            "claim_level_6",
+                            "claim_level_7",
+                            "claim_level_8",
+                            "claim_level_9",
+                            "claim_level_10",
+                            "claim_level_11",
+                            "claim_level_12",
+                            "claim_level_13",
+                            "claim_level_14",
+                            "claim_level_15",
+                            "claim_level_16",
+                            "claim_level_17",
+                            "claim_level_18",
+                            "claim_level_19",
+                            "claim_level_20",
+                            "claim_level_21",
+                            "mining_streak_7",
+                            "mining_streak_14",
+                            "mining_streak_30"
                         ],
                         "type": "string",
                         "description": "the type of the task",
@@ -590,6 +801,10 @@
         "tasks.Metadata": {
             "type": "object",
             "properties": {
+                "errorDescription": {
+                    "type": "string",
+                    "example": "Error description"
+                },
                 "iconUrl": {
                     "type": "string",
                     "example": "https://app.ice.com/web/invite.svg"
@@ -648,7 +863,61 @@
                 "follow_us_on_twitter",
                 "join_twitter",
                 "join_telegram",
-                "invite_friends"
+                "invite_friends",
+                "join_youtube",
+                "watch_video_with_code_confirmation_1",
+                "invite_friends_5",
+                "invite_friends_10",
+                "claim_badge_l1",
+                "claim_badge_l2",
+                "claim_badge_l3",
+                "claim_badge_l4",
+                "claim_badge_l5",
+                "claim_badge_l6",
+                "claim_badge_c1",
+                "claim_badge_c2",
+                "claim_badge_c3",
+                "claim_badge_c4",
+                "claim_badge_c5",
+                "claim_badge_c6",
+                "claim_badge_c7",
+                "claim_badge_c8",
+                "claim_badge_c9",
+                "claim_badge_c10",
+                "claim_badge_s1",
+                "claim_badge_s2",
+                "claim_badge_s3",
+                "claim_badge_s4",
+                "claim_badge_s5",
+                "claim_badge_s6",
+                "claim_badge_s7",
+                "claim_badge_s8",
+                "claim_badge_s9",
+                "claim_badge_s10",
+                "claim_level_1",
+                "claim_level_2",
+                "claim_level_3",
+                "claim_level_4",
+                "claim_level_5",
+                "claim_level_6",
+                "claim_level_7",
+                "claim_level_8",
+                "claim_level_9",
+                "claim_level_10",
+                "claim_level_11",
+                "claim_level_12",
+                "claim_level_13",
+                "claim_level_14",
+                "claim_level_15",
+                "claim_level_16",
+                "claim_level_17",
+                "claim_level_18",
+                "claim_level_19",
+                "claim_level_20",
+                "claim_level_21",
+                "mining_streak_7",
+                "mining_streak_14",
+                "mining_streak_30"
             ],
             "x-enum-varnames": [
                 "ClaimUsernameType",
@@ -657,7 +926,61 @@
                 "FollowUsOnTwitterType",
                 "JoinTwitterType",
                 "JoinTelegramType",
-                "InviteFriendsType"
+                "InviteFriendsType",
+                "JoinYoutubeType",
+                "WatchVideoWithCodeConfirmation1Type",
+                "InviteFriends5Type",
+                "InviteFriends10Type",
+                "ClaimLevelBadge1Type",
+                "ClaimLevelBadge2Type",
+                "ClaimLevelBadge3Type",
+                "ClaimLevelBadge4Type",
+                "ClaimLevelBadge5Type",
+                "ClaimLevelBadge6Type",
+                "ClaimCoinBadge1Type",
+                "ClaimCoinBadge2Type",
+                "ClaimCoinBadge3Type",
+                "ClaimCoinBadge4Type",
+                "ClaimCoinBadge5Type",
+                "ClaimCoinBadge6Type",
+                "ClaimCoinBadge7Type",
+                "ClaimCoinBadge8Type",
+                "ClaimCoinBadge9Type",
+                "ClaimCoinBadge10Type",
+                "ClaimSocialBadge1Type",
+                "ClaimSocialBadge2Type",
+                "ClaimSocialBadge3Type",
+                "ClaimSocialBadge4Type",
+                "ClaimSocialBadge5Type",
+                "ClaimSocialBadge6Type",
+                "ClaimSocialBadge7Type",
+                "ClaimSocialBadge8Type",
+                "ClaimSocialBadge9Type",
+                "ClaimSocialBadge10Type",
+                "ClaimLevel1Type",
+                "ClaimLevel2Type",
+                "ClaimLevel3Type",
+                "ClaimLevel4Type",
+                "ClaimLevel5Type",
+                "ClaimLevel6Type",
+                "ClaimLevel7Type",
+                "ClaimLevel8Type",
+                "ClaimLevel9Type",
+                "ClaimLevel10Type",
+                "ClaimLevel11Type",
+                "ClaimLevel12Type",
+                "ClaimLevel13Type",
+                "ClaimLevel14Type",
+                "ClaimLevel15Type",
+                "ClaimLevel16Type",
+                "ClaimLevel17Type",
+                "ClaimLevel18Type",
+                "ClaimLevel19Type",
+                "ClaimLevel20Type",
+                "ClaimLevel21Type",
+                "MiningStreak7Type",
+                "MiningStreak14Type",
+                "MiningStreak30Type"
             ]
         }
     }
